--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,14 @@ main {
     background-image: url('images/tiles/tree.png');
 }
 
+.tile.chest {
+    background-image: url('images/items/chest_open.png');
+}
+
+.tile.arrow {
+    background-image: url('images/weapons/arrow.png');
+}
+
 #items {
     grid-area: 1/1;
 }
@@ -57,7 +65,6 @@ main {
     background-image: url('images/Characters/Character\ 8.png');
     background-size: 400% 400%;
     image-rendering: pixelated;
-
 }
 
 #player.animate {
